--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "mongodb": "^3.3.1",
     "nodemon": "^1.19.1",
+    "saslprep": "^1.0.3",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
