--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "author": "Mohammad Al-Ahdal <mo@mohammad.dev>",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.518.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
