--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongodb": "^3.3.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^1.19.1",
     "saslprep": "^1.0.3",
     "typescript": "^3.5.3"
